--- a/_css/styles.css
+++ b/_css/styles.css
@@ -1,9 +1,9 @@
-html,
-body {
-    background: #663399;
-    /* Beccapurple */
-    margin: 0;
+html {
+    background-image: url("../images/mulholland-background.jpeg");
+    background-repeat: repeat;
+    background-size: auto;
 }
+
 
 h1,
 h2,
